--- a/landscape.yml
+++ b/landscape.yml
@@ -5202,6 +5202,13 @@ landscape:
             logo: packer.svg
             crunchbase: https://www.crunchbase.com/organization/hashicorp
           - item:
+            name: Plural
+            homepage_url: https://www.plural.sh/
+            repo_url: https://github.com/pluralsh/plural
+            logo: plural.svg
+            twitter: https://twitter.com/plural_sh
+            crunchbase: https://www.crunchbase.com/organization/plural-37ce
+          - item:
             name: Podman
             homepage_url: https://podman.io/
             repo_url: https://github.com/containers/podman
